# aspect_bazel_demo

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.bazel.md  README.md  REPO.bazel  go.mod  package-lock.json  package.json  pyproject.toml
.aspect/bazelrc/: BUILD.bazel
.aspect/cli/: config.yaml
tools/: BUILD.bazel
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  linters.bzl
